Fix too light link color in header

--- a/src/style/header.css
+++ b/src/style/header.css
@@ -7,6 +7,10 @@
   color: #fff;
 }
 
+.header a {
+  color: #0116a9;
+}
+
 .header-text {
   position: absolute;
   top: 0;
